-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
ldlm_cli_inodebits_convert() can race with import invalidation and as a result - can try to re-grant a cancelled lock:
00000100:00080000:3.0:1699525322.988962:0:3134:0:(import.c:1294:ptlrpc_connect_interpret()) @@@ lustre-MDT0001-mdc-ffff95f0a8edb000: evicting (reconnect/recover flags not set: 4) req@000000004b406d55 x1782080047922752/t0(0) o38->lustre-MDT0001-mdc-ffff95f0a8edb000@0@lo:12/10 lens 520/416 e 0 to 0 dl 1699525332 ref 1 fl Interpret:RNQU/200/0 rc 0/0 job:'mv.0' uid:0 gid:0 00010000:00010000:3.0:1699525323.004657:0:116519:0:(ldlm_request.c:1300:ldlm_cli_cancel_local()) ### client-side cancel ns: lustre-MDT0001-mdc-ffff95f0a8edb000 lock: 0000000073a2bb93/0xaa6346196bd6c00a lrc: 4/0,0 mode: CR/CR res: [0x240000407:0xe2:0x0].0x0 bits 0x5/0x7e rrc: 3 type: IBT gid 0 flags: 0x50e400000000 nid: local remote: 0xaa6346196bd6c10d expref: -99 pid: 115943 timeout: 0 lvb_type: 0 00010000:00010000:3.0:1699525323.004660:0:116519:0:(ldlm_request.c:1316:ldlm_cli_cancel_local()) not sending request (at caller's instruction) 00010000:00010000:3.0:1699525323.038025:0:8037:0:(ldlm_request.c:1246:ldlm_cli_convert_req()) ### client-side convert ns: lustre-MDT0001-mdc-ffff95f0a8edb000 lock: 0000000073a2bb93/0xaa6346196bd6c00a lrc: 1/0,0 mode: --/CR res: [0x240000407:0xe2:0x0].0x0 bits 0x5/0x7e rrc: 2 type: IBT gid 0 flags: 0x4d0f400000000 nid: local remote: 0xaa6346196bd6c10d expref: -99 pid: 115943 timeout: 0 lvb_type: 0 00010000:00040000:3.0:1699525323.082320:0:8037:0:(ldlm_lock.c:1095:ldlm_grant_lock_with_skiplist()) ASSERTION( ldlm_is_granted(lock) ) failed:
ldlm_cli_inodebits_convert() should check lock's actuality before granting.
- is related to
-
LU-16596 Lustre client crashed with ASSERTION( ldlm_is_granted(lock) ) failed
-
- Resolved
-